add texture to ui

--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -3,3 +3,9 @@ $grullo: #9c9583ff;
 $quick-silver: #a1a499ff;
 $silver-sand: #b0bbbfff;
 $ash-gray: #cadbc8ff;
+
+$gray-darker: #525252;
+$gray-dark: #696969;
+$gray: #808080;
+$gray-light: #aeaeae;
+$gray-lightest: #c5c5c5;
